fixed an issue with image stretching

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ body{
 
 .header-image{
   width: 100%;
+  height: 100%;
 }
 
 .site-nav{
